<resources>
    <string name="app_name">InSpace</string>
    <string name="planet_name_title">Planet name:</string>
    <string name="number_of_fields_title">Number of fields:</string>
    <string name="planet_position_title">Position:</string>
    <string name="overview">Overview</string>
    <string name="buildings">Buildings</string>
    <string name="research">Research</string>
    <string name="fleet">Fleet</string>
    <string name="missions">Missions</string>
    <string name="url">https://frozen-stream-78027.herokuapp.com</string>
    <string name="resources">Resources</string>
    <string name="metal">Metal</string>
    <string name="crystals">Crystals</string>
    <string name="deuterium">Deuterium</string>
    <string name="energy">Energy</string>
    <string name="power">Power</string>
    <string name="fields">Fields</string>
    <string name="capacity">Capacity</string>
    <string name="speed">Speed</string>
    <string name="shield">Shield Structure</string>
    <string name="structure">Structure</string>
    <string name="attack">Attack</string>
</resources>
